# codeai

./: .gitignore  Cargo.toml  README.md  codeai-design.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/troubleshooting/: indexing-and-install.md
src/: autoreindex.rs  lang.rs  main.rs  models.rs  parser.rs  scanner.rs  search.rs  store.rs
src/commands/: edit.rs  graph.rs  index.rs  mod.rs  open.rs  outline.rs  project.rs  search.rs  write.rs
tests/: cli.rs
